--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                      <div class="voice-controls" id="voiceControls">
                          <button class="btn-secondary" id="btnToggleVoice"><i class="fas fa-microphone"></i> 開啟語音</button>
                          <button class="btn-secondary" id="btnToggleTranscribe"><i class="fas fa-closed-captioning"></i> 開啟轉寫</button>
+                         <button class="btn-secondary" id="btnDownloadTranscript"><i class="fas fa-download"></i> 下載字幕</button>
                      </div>
                     </div>
                 </div>
